--- a/settings.html
+++ b/settings.html
@@ -49,6 +49,25 @@ $yesno = array(get_string('no'), get_string('yes'));
         <?php print_string($field.'_help', 'auth_saml2') ?></td>
 </tr>
 <tr valign="top">
+    <?php $field = 'credentials' ?>
+    <td align="right"><label for="<?php echo $field ?>"><?php print_string($field, 'auth_saml2') ?></label></td>
+    <td>
+        <?php
+            $link = "location.href='". $CFG->wwwroot . "/auth/saml2/regenerate.php'";
+            $value = get_string($field, 'auth_saml2');
+            echo html_writer::tag(  'input',
+                                     '',
+                                     array("type"=>"button",
+                                           "value"=>$value,
+                                           "onclick"=>$link,
+                                     )
+                                  );
+        ?>
+        <br/>
+        <?php print_string($field.'_help', 'auth_saml2') ?>
+    </td>
+</tr>
+<tr valign="top">
     <?php $field = 'spmetadata' ?>
     <td align="right"><label for="<?php echo $field ?>"><?php print_string($field, 'auth_saml2') ?></label></td>
     <td><?php print_string($field.'_help', 'auth_saml2', array(
