--- a/settings.html
+++ b/settings.html
@@ -46,10 +46,10 @@ $yesno = array(get_string('no'), get_string('yes'));
     <td align="right"><label for="<?php echo $field ?>"><?php print_string($field, 'auth_saml2') ?></label></td>
     <td><?php echo html_writer::select($yesno, $field, $config->$field, false) ?>
         <?php if (isset($err[$field])) { echo $OUTPUT->notification($err[$field], 'notifyfailure'); } ?>
-        <?php print_string($field.'_help', 'auth_saml2') ?></td>
+        <?php print_string($field.'_help', 'auth_saml2', "$CFG->wwwroot/auth/saml2/debug.php") ?></td>
 </tr>
 <tr valign="top">
-    <?php $field = 'credentials' ?>
+    <?php $field = 'certificate' ?>
     <td align="right"><label for="<?php echo $field ?>"><?php print_string($field, 'auth_saml2') ?></label></td>
     <td>
         <?php
@@ -64,17 +64,13 @@ $yesno = array(get_string('no'), get_string('yes'));
                                   );
         ?>
         <br/>
-        <?php print_string($field.'_help', 'auth_saml2') ?>
+        <?php print_string($field.'_help', 'auth_saml2', "$CFG->wwwroot/auth/saml2/cert.php") ?>
     </td>
 </tr>
 <tr valign="top">
     <?php $field = 'spmetadata' ?>
     <td align="right"><label for="<?php echo $field ?>"><?php print_string($field, 'auth_saml2') ?></label></td>
-    <td><?php print_string($field.'_help', 'auth_saml2', array(
-        "meta" => "$CFG->wwwroot/auth/saml2/sp/metadata.php",
-        "cert" => "$CFG->wwwroot/auth/saml2/cert.php",
-        "debug" => "$CFG->wwwroot/auth/saml2/debug.php",
-    )) ?>
+    <td><?php print_string($field.'_help', 'auth_saml2', "$CFG->wwwroot/auth/saml2/sp/metadata.php") ?>
         <?php if (isset($err[$field])) { echo $OUTPUT->notification($err[$field], 'notifyfailure'); } ?>
     </td>
 </tr>
