--- a/settings.html
+++ b/settings.html
@@ -111,5 +111,14 @@ $fields = array(
         <?php if (isset($err[$field])) { echo $OUTPUT->notification($err[$field], 'notifyfailure'); } ?>
         <?php print_string($field.'_help', 'auth_saml2') ?></td>
 </tr>
+<tr valign="top">
+    <?php $field = 'autocreate' ?>
+    <td align="right"><label for="<?php echo $field ?>"><?php print_string($field, 'auth_saml2') ?></label></td>
+    <td><?php echo html_writer::select($yesno, $field, $config->$field, false) ?>
+        <?php if (isset($err[$field])) { echo $OUTPUT->notification($err[$field], 'notifyfailure'); } ?>
+        <?php print_string($field.'_help', 'auth_saml2') ?></td>
+</tr>
+
+<?php print_auth_lock_options('saml2', $userfields, '<!-- empty help -->', true, false); ?>
 </table>
 
