--- a/settings.html
+++ b/settings.html
@@ -119,6 +119,15 @@ $fields = array(
         <?php print_string($field.'_help', 'auth_saml2') ?></td>
 </tr>
 
-<?php print_auth_lock_options('saml2', $userfields, '<!-- empty help -->', true, false); ?>
+<?php
+        //Grab custom profile fields from Moodle and put into an array that we can pass to print_auth_lock_options()
+        global $DB;
+        $customProfileFieldsData = $DB->get_records('user_info_field');
+        $customFields = array();
+        foreach($customProfileFieldsData as $field){
+                $customFields[] = $field->shortname;
+        }
+
+        print_auth_lock_options('saml2', $userfields, '<!-- empty help -->', true, false, $customFields);
 </table>
 
