--- a/settings.html
+++ b/settings.html
@@ -75,6 +75,13 @@ $yesno = array(get_string('no'), get_string('yes'));
     </td>
 </tr>
 <tr valign="top">
+    <?php $field = 'spmetadatasign' ?>
+    <td align="right"><label for="<?php echo $field ?>"><?php print_string($field, 'auth_saml2') ?></label></td>
+    <td><?php echo html_writer::select($yesno, $field, $config->$field, false) ?>
+        <?php if (isset($err[$field])) { echo $OUTPUT->notification($err[$field], 'notifyfailure'); } ?>
+        <?php print_string($field.'_help', 'auth_saml2') ?></td>
+</tr>
+<tr valign="top">
     <?php $field = 'duallogin' ?>
     <td align="right"><label for="<?php echo $field ?>"><?php print_string($field, 'auth_saml2') ?></label></td>
     <td><?php echo html_writer::select($yesno, $field, $config->$field, false) ?>
