--- a/settings.html
+++ b/settings.html
@@ -42,7 +42,7 @@ $yesno = array(get_string('no'), get_string('yes'));
         <?php print_string($field.'_help', 'auth_saml2') ?></td>
 </tr>
 <tr valign="top">
-    <?php $field = 'suppressidplink' ?>
+    <?php $field = 'showidplink' ?>
     <td align="right"><label for="<?php echo $field ?>"><?php print_string($field, 'auth_saml2') ?></label></td>
     <td><?php echo html_writer::select($yesno, $field, $config->$field, false) ?>
         <?php if (isset($err[$field])) { echo $OUTPUT->notification($err[$field], 'notifyfailure'); } ?>
