--- a/settings.html
+++ b/settings.html
@@ -179,6 +179,11 @@ $fields = array(
         <?php if (isset($err[$field])) { echo $OUTPUT->notification($err[$field], 'notifyfailure'); } ?>
         <?php print_string($field.'_help', 'auth_saml2') ?></td>
 </tr>
+<tr valign="top">
+    <?php $field = 'sspversion' ?>
+    <td align="right"><label for="<?php echo $field ?>"><?php print_string($field, 'auth_saml2') ?></label></td>
+    <td><?php $auth = new auth_plugin_saml2(); print($auth->get_ssp_version()); ?></td>
+</tr>
 
 <?php print_auth_lock_options('saml2', $userfields, '<!-- empty help -->', true, false, $this->get_custom_user_profile_fields()); ?>
 </table>
