--- a/settings.html
+++ b/settings.html
@@ -179,6 +179,13 @@ $fields = array(
         <?php if (isset($err[$field])) { echo $OUTPUT->notification($err[$field], 'notifyfailure'); } ?>
         <?php print_string($field.'_help', 'auth_saml2') ?></td>
 </tr>
+<tr valign="top">
+    <?php $field = 'alterlogout' ?>
+    <td align="right"><label for="<?php echo $field ?>"><?php print_string($field, 'auth_saml2') ?></label></td>
+    <td><input type="text" size="40" name="<?php echo $field ?>" value="<?php print $config->$field ?>">
+        <?php if (isset($err[$field])) { echo $OUTPUT->notification($err[$field], 'notifyfailure'); } ?>
+        <?php print_string($field.'_help', 'auth_saml2') ?></td>
+</tr>
 
 <?php print_auth_lock_options('saml2', $userfields, '<!-- empty help -->', true, false, $this->get_custom_user_profile_fields()); ?>
 </table>
