--- a/settings.html
+++ b/settings.html
@@ -161,9 +161,13 @@ if(!function_exists('mcrypt_encrypt')) {
         <?php print_string($field.'_help', 'auth_saml2') ?></td>
 </tr>
 <tr valign="top">
-    <?php $field = 'duallogin' ?>
+    <?php
+        $field = 'duallogin';
+        $dualloginoptions = $yesno;
+        $dualloginoptions[] = get_string('passivemode', 'auth_saml2');
+    ?>
     <td align="right"><label for="<?php echo $field ?>"><?php print_string($field, 'auth_saml2') ?></label></td>
-    <td><?php echo html_writer::select($yesno, $field, $config->$field, false) ?>
+    <td><?php echo html_writer::select($dualloginoptions, $field, $config->$field, false) ?>
         <?php if (isset($err[$field])) { echo $OUTPUT->notification($err[$field], 'notifyfailure'); } ?>
         <?php print_string($field.'_help', 'auth_saml2') ?></td>
 </tr>
